--- a/resume.html
+++ b/resume.html
@@ -8,6 +8,8 @@
   <meta property="og:description" content="Paul Moore resume and professional summary." />
   <title>Resume — Paul Moore</title>
   <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/print.css" media="print" />
+  <link rel="alternate" type="text/vcard" href="/resume.vcf" />
 </head>
 <body>
   <a class="skip" href="#main">Skip to content</a>
@@ -18,6 +20,8 @@
         <a href="/">Home</a>
         <a href="/certifications.html">Certifications</a>
         <a href="/resume.pdf" download rel="noopener noreferrer">Download PDF</a>
+        <a href="/resume.vcf" download rel="noopener noreferrer">Download vCard</a>
+        <button class="btn ghost print-only" onclick="window.print()">Print Resume</button>
       </nav>
     </div>
   </header>
